# game_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.MD  docker-compose.yml  main.py  pyproject.toml
app/: config.py  database.py
app/api/: deps.py  websocket.py
app/api/v1/: auth.py  game.py  images.py  leaderboard.py  openai.py  rooms.py
app/models/: __init__.py  anomaly_point.py  anomaly_region.py  game_attempt.py  game_room.py  game_session.py  image.py  user.py
app/schemas/: game.py  image.py  room.py  user.py
app/utils/: geometry.py  security.py
tests/: test_geometry.py
